corse configuration v3